<resources>
    <string name="app_name">5181 Scouting Collector</string>
    <string name="data_collection">Data Collection</string>
    <string name="action_settings">Settings</string>
    <string name="dead">Dead</string>
    <string name="park">Park</string>
    <string name="climb">Climbed</string>
    <string name="balance">Climbed and Balanced</string>
    <string name="control_position">Position Control</string>
    <string name="control_rotation">Rotation Control</string>
    <string name="auton">Auton</string>
    <string name="teleop">Teleop</string>
    <string name="shot_miss">Misses:</string>
    <string name="shot_lower">Lower Shots:</string>
    <string name="shot_upper">Upper Shots:</string>
    <string name="shot_inner">Inner Shots:</string>
    <string name="submit">Submit</string>
    <string name="teamNumber">Team Number</string>
    <string name="matchNumber">Match Number</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="clear">Clear</string>
</resources>
