<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataCollectionActivity"
    tools:showIn="@layout/activity_data_collection">

    <EditText
        android:id="@+id/editText_teamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/teamNumber"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/blue"
        android:textOn="@string/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_teamNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_matchNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/matchNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_teamNumber" />

    <EditText
        android:id="@+id/editText_miss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_shot_miss"
        app:layout_constraintTop_toBottomOf="@+id/editText_matchNumber" />

    <TextView
        android:id="@+id/textView_shot_miss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shot_miss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_miss" />

    <EditText
        android:id="@+id/editText_lower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText_miss"
        app:layout_constraintTop_toBottomOf="@+id/editText_miss" />

    <TextView
        android:id="@+id/textView_shot_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shot_lower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_lower" />

    <EditText
        android:id="@+id/editText_upper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText_lower"
        app:layout_constraintTop_toBottomOf="@+id/editText_lower" />

    <TextView
        android:id="@+id/textView_shot_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shot_upper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_upper" />

    <EditText
        android:id="@+id/editText_inner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText_upper"
        app:layout_constraintTop_toBottomOf="@+id/editText_upper" />

    <TextView
        android:id="@+id/textView_shot_inner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shot_inner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_inner" />

    <CheckBox
        android:id="@+id/checkBox_control_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/control_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_inner" />

    <CheckBox
        android:id="@+id/checkBox_control_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/control_rotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_control_color" />

    <RadioGroup
        android:id="@+id/radio_climb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_control_rotation">

        <RadioButton
            android:id="@+id/radioButton_climb_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/radioButton_climb_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/park" />

        <RadioButton
            android:id="@+id/radioButton_climb_climb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/climb" />

        <RadioButton
            android:id="@+id/radioButton_climb_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_dead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_climb" />

</androidx.constraintlayout.widget.ConstraintLayout>